kubernetes/thothRunner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoth-runner
spec:
  selector:
    matchLabels:
      app: thoth-runner
  replicas: 1
  template:
    metadata:
      labels:
        app: thoth-runner
    spec:
      tolerations:
        - key: "appservicesonly"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: server
          image: 389959444765.dkr.ecr.us-east-1.amazonaws.com/thoth-server:latest
          workingDir: /app/packages/server
          args: ["src/entity-server.ts"]
          stdin: true
          tty: true
          ports:
            - containerPort: 8001
              protocol: TCP
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: thoth-server
spec:
  selector:
    app: thoth-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thoth-server-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: thoth-server
                port:
                  number: 80
