kubernetes/thothServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoth-server
spec:
  selector:
    matchLabels:
      app: thoth-server
  replicas: 1
  template:
    metadata:
      labels:
        app: thoth-server
    spec:
      tolerations:
        - key: "appservicesonly"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: server
          image: 389959444765.dkr.ecr.us-east-1.amazonaws.com/thoth-server:latest
          workingDir: /app/packages/server
          args:
            [
              'concurrently "nodemon src/server.ts" "yarn run speech" "sleep 1 && yarn run search" "sleep 2 && yarn run entity-server"',
            ]
          stdin: true
          tty: true
          ports:
            - containerPort: 8001
              protocol: TCP
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: thoth-server
spec:
  selector:
    app: thoth-server
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8001
    - protocol: TCP
      port: 65532
      name: speech
      targetPort: 65532
    - protocol: TCP
      port: 65531
      name: search
      targetPort: 65531

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thoth-server-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:389959444765:certificate/bdd1359a-55a4-47f0-bce3-946bc57a0031

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: thoth-server
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: thoth-server
                port:
                  number: 65532
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: thoth-server
                port:
                  number: 65531
